--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fetch</title>
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
     <h1>Fetch me daddy</h1>
     <ul>
-        LIST...
+        <li></li>
+        <li></li>
+        <li></li>
     </ul>
     <script src="./js/main.js" type="module" defer></script>
 </body>
