--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 <body>
     <h1>Fetch me daddy</h1>
     <ul>
-        <li></li>
-        <li></li>
-        <li></li>
+        LIST...
     </ul>
     <script src="./js/main.js" type="module" defer></script>
 </body>
